# fastui-admin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Playground.ipynb  README.md  ROADMAP.md  TOOD.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py
examples/basic/: __init__.py  main.py
examples/minimal/: main.py
examples/readonly/: __init__.py  main.py
src/fastui_admin/: __about__.py  __init__.py  base.py  layout.py  utils.py  views.py
tests/: conftest.py  test_admin.py  test_base_admin_config.py  test_utils.py
